<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:scrollbars="none">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/view_pagers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <include
                android:id="@+id/layout_head"

                layout="@layout/viewpager_more"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ddd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_pagers"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_book"
                    android:gravity="center_horizontal"
                    android:text="@string/history" />

                <TextView
                    android:id="@+id/news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:drawableTop="@drawable/ic_movie"
                    android:gravity="center_horizontal"
                    android:text="@string/activity" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_const"
                    android:gravity="center_horizontal"
                    android:text="@string/info" />
                <TextView
                    android:id="@+id/service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_const"
                    android:gravity="center_horizontal"
                    android:text="@string/service" />
                <TextView
                    android:id="@+id/run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_const"
                    android:gravity="center_horizontal"
                    android:text="@string/run" />
            </LinearLayout>

            <TextView
                android:id="@+id/infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:drawableRight="@drawable/ic_loading_fail2"
                android:gravity="center"
                android:text="==最新资讯==" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/music"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/top_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="280dp"

            android:drawableTop="@drawable/ic_const"
            android:gravity="center_horizontal"
            android:text="置顶"
            android:visibility="visible"/>


    </RelativeLayout>

</ScrollView>
